--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ target/
 
 # docs
 docs/df_sample.csv
-docs/README COMPOSE.ipynb
-docs/README export.ipynb
-docs/README export.md
+docs/README_COMPOSE.ipynb
+docs/README_export.ipynb
+docs/README_export.md
 docs/.ipynb_checkpoints/
