--- a/settings.ini
+++ b/settings.ini
@@ -6,10 +6,10 @@ lib_name = tabint
 # repo_name = analytics
 # company_name = nike
 
-user = ddpham
+user = KienVu2368
 description = tabular data interpretation and explaination
 keywords = tabular data interpretation and explaination
-author = ddpham
+author = Kien Vu, Duc Pham
 author_email = 
 copyright = 
 branch = master
