--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+tabint/__pycache__
 *.py[cod]
 *$py.class
 
@@ -59,16 +60,16 @@ target/
 
 
 # docs
-docs/df_sample.csv
-docs/README_COMPOSE.ipynb
-docs/README_export.ipynb
-docs/README_export.md
+#docs/df_sample.csv
+#docs/README_COMPOSE.ipynb
+#docs/README_export.ipynb
+#docs/README_export.md
 docs/.ipynb_checkpoints/
 docs/.ipynb_checkpoints
 *.ipynb_checkpoints/
 ipynb_checkpoints/
-/nbs/
-/nbs
-nbs/
+#/nbs/
+#/nbs
+#nbs/
 *.vscode/
-/notebook/
+#/notebook/
